test: fix zooming on safari

--- a/css/pages/_recording.scss
+++ b/css/pages/_recording.scss
@@ -164,6 +164,9 @@
                     outline: none;
                 }
 
+                &:focus {
+                    font-size: 16px;
+                }
             }
 
             .selectBox-wrapper {
